--- a/master-agent-frontend/app.yaml
+++ b/master-agent-frontend/app.yaml
@@ -1,6 +1,6 @@
 runtime: python310
-service: frontend-prod
-# service: frontend-dev
+# service: frontend-prod
+service: frontend-dev
 
 handlers:
 - url: /
