--- a/master-agent-backend/requirements.txt
+++ b/master-agent-backend/requirements.txt
@@ -14,3 +14,12 @@ typing_extensions==4.14.0
 Werkzeug==3.1.3
 gunicorn==23.0.0
 psycopg2-binary==2.9.10
+flask
+sqlalchemy
+psycopg2-binary
+requests
+beautifulsoup4
+PyPDF2
+google-generativeai
+python-dotenv
+gunicorn
