--- a/master-agent-backend/requirements.txt
+++ b/master-agent-backend/requirements.txt
@@ -23,3 +23,8 @@ PyPDF2
 google-generativeai
 python-dotenv
 gunicorn
+Flask==2.3.3
+Flask-CORS==4.0.0
+google-generativeai==0.3.2
+requests==2.31.0
+gunicorn==21.2.0
