--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,20 +9,20 @@ steps:
         npm install
         npm run build
         
-  # Deploy frontend service to dev
+  # Deploy frontend service
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'app'
       - 'deploy'
-      - 'master-agent-frontend/app-dev.yaml'
+      - 'master-agent-frontend/app.yaml'
       - '--quiet'
         
-  # Deploy backend service to dev
+  # Deploy backend service
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'app'
       - 'deploy'
-      - 'master-agent-backend/app-dev.yaml'
+      - 'master-agent-backend/app.yaml'
       - '--quiet'
 
 options:
